More Methods in GetHindemithChordsFromDbUseCase